--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -18,7 +18,7 @@
         </div>
       </div>
       <div class="row rowInner">
-        <div class="col">
+        <div id="result" class="col">
           <p>Result</p>
         </div>
       </div>
